# stm32-weatherstation-transmitter

./: .gitignore  .gitmodules  CMakeLists.txt  openocd.cfg  openocd.gdb
cmake/: toolchain-gcc-cortex-m3.cmake
src/: CMakeLists.txt
src/application/inc/: app.h  led.h  sensor.h
src/application/src/: app_main.c  init.c  led.c  sensor.c
src/drivers/inc/: bme280.h  fifo.h  fifos.h  i2c_tools.h  log.h  nrf24.h
src/drivers/src/: bme280.c  fifo.c  fifos.c  i2c_tools.c  log.c  nrf24.c
src/os/inc/: os_port.h
src/stm32f103/: CMakeLists.txt  STM32F103C8Tx_FLASH.ld  copy.sh
src/stm32f103/startup/inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
src/stm32f103/startup/src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
stm32cubemx/: stm32cubemx.ioc
